* src/data/main*.css: fix <sup> spacing in CSS files
* src/plugins/NavWebPage.py: split parents and families
* src/ReportUtils.py: save note information


svn: r4949

--- a/gramps2/src/data/main1.css
+++ b/gramps2/src/data/main1.css
@@ -89,6 +89,10 @@ A:active {
 	color: #000;
 	text-decoration: none;
 }
+SUP {
+    line-height: 0;
+}
+
 
 /* Custom {{{1
  */
