--- a/gramps2/src/data/main2.css
+++ b/gramps2/src/data/main2.css
@@ -89,6 +89,9 @@ A:active {
 	color: #000;
 	text-decoration: none;
 }
+SUP {
+    line-height: 0;
+}
 
 /* Custom {{{1
  */
