--- a/gramps2/src/data/main3.css
+++ b/gramps2/src/data/main3.css
@@ -88,6 +88,9 @@ A:active {
 	text-decoration: none;
 }
 
+SUP {
+    line-height: 0;
+}
 /* Custom {{{1
  */
 
