--- a/gramps2/src/data/main4.css
+++ b/gramps2/src/data/main4.css
@@ -97,6 +97,9 @@ A:active {
 	text-decoration: none;
 }
 
+SUP {
+    line-height: 0;
+}
 /* Custom {{{1
  */
 
