--- a/gramps2/src/data/main5.css
+++ b/gramps2/src/data/main5.css
@@ -96,6 +96,9 @@ A:active {
 	text-decoration: none;
 }
 
+SUP {
+    line-height: 0;
+}
 /* Custom {{{1
  */
 
